<resources>
    <string name="app_name">My Private Lessons</string>
    <string name="contactsTextView">Contcacts</string>
    <string name="listTextView">List</string>
    <string name="settingsTextView">Settings</string>
    <string name="imageSettings">App Settings</string>
    <string name="imageLessoonesList">Lessons List</string>
    <string name="imageContacts">Contacts List</string>
    <string name="nameTextView">Contact Name</string>
    <string name="areaTextView">Area Of Study</string>
    <string name="addContactButton">ADD Contact</string>
    <string name="nameEditText">Full Name</string>
    <string name="phoneEditText">Phone Number</string>
    <string name="createContactButton">ADD</string>
    <string name="inContactNametextView">Full Name</string>
    <string name="inContactAreatextView">Stuies Area</string>
    <string name="inContactPhonetextView">Phone Number</string>
    <string name="inContactDeleteButton">Delete Contact</string>
    <string name="inContactAddButton">New Lesson</string>
    <string name="subjectEditText"></string>
    <string name="toTextView">To</string>
    <string name="selectDateTextView">Select Date:</string>
    <string name="createLessontButton">ADD</string>
    <string name="lessonTimeTextView">00:00</string>
    <string name="lessonEditTimeButton">Time_Picker</string>
    <string name="lessonEditDateButton">Date_Picker</string>
    <string name="lessonDateTextView">01/01/2017</string>
    <string name="lessonSubjectEditText">Lesson Subject</string>
    <string name="startTextView">Start At:</string>
    <string name="lessoenListDateTextView">Date</string>
    <string name="lessoenListTitleTextView">Lessoen Subject</string>
    <string name="lessoenListTimeFromTextView">Time</string>
    <string name="autenticationSureTextView">Are You Sure ?</string>
    <string name="autenticationSetLoessonTextView">Set lesson to:</string>
    <string name="autenticationDateTextView">01/01/2017</string>
    <string name="autenticationFromTextView">From:</string>
    <string name="autenticationFromTimeTextView">00:00</string>
    <string name="autenticationNoButton">NO</string>
    <string name="autenticationYesButton">YES</string>
    <string name="endTextView">How Long:</string>
    <string name="autenticationToTextView">To:</string>
    <string name="autenticationToTimeTextView">00:00</string>
    <string name="lessoenListToTextView">" - "</string>
    <string name="lessoenListToTimeTextView">Time</string>
    <string name="mainToLessonstextView">Top Lessons</string>
    <string name="mainListFullNameTextView">Full Name</string>
    <string name="lessonDetailsShowTextView">Lesson Details</string>
    <string name="dateShowTextView">Date:</string>
    <string name="dateTextView">2017-01-01</string>
    <string name="timeLessonViewShowTextView">On time:</string>
    <string name="timeLessonViewTextView">00:00 - 01:00</string>
    <string name="descriptionLessonViewTextView">description text</string>
    <string name="descriptionShowLessonViewTextView">Description:</string>
    <string name="deleteLessonViewbutton">Delete</string>
    <string name="studentNameShowTextView">Studant Name</string>
    <string name="studentNameLessonViewTextView">student Name:</string>
    <string name="settingsTitleTextView">Settings</string>
    <string name="teacherNameEditText">Teacher\'s Name</string>
    <string name="smsTextView">Send SMS</string>
    <string name="setButton">SET</string>
    <string name="appwidget_text">My Private Lessons</string>
    <string name="configure">Configure</string>
    <string name="add_widget">Add widget</string>
</resources>
