<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_lesson_view"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.ofirnagadi.ofirnagadi.project.LessonViewActivity"
    android:orientation="vertical">

    <TextView
        android:text="@string/lessonDetailsShowTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/lessonDetailsShowTextView"
        android:fontFamily="casual"
        android:textSize="24sp"
        android:textStyle="normal|bold"
        android:textAlignment="center"
        android:textColor="#18517f"
        android:paddingBottom="20dp" />

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="10dp">

        <TextView
            android:text="@string/studentNameShowTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/studentNameShowTextView"
            android:layout_weight="1"
            android:textSize="24sp"
            android:fontFamily="sans-serif"
            android:textColor="#000"
            android:textStyle="normal|bold" />

        <TextView
            android:text="@string/studentNameLessonViewTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/studentNameLessonViewTextView"
            android:layout_weight="1"
            android:textAlignment="center"
            android:textStyle="normal|bold"
            android:textSize="18sp" />
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="10dp">

        <TextView
            android:text="@string/dateShowTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/dateShowTextView"
            android:layout_weight="1"
            android:textSize="24sp"
            android:fontFamily="sans-serif"
            android:textColor="#000"
            android:textStyle="normal|bold" />

        <TextView
            android:text="@string/dateTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/dateLessonViewTextView"
            android:layout_weight="1"
            android:textAlignment="center"
            android:textStyle="normal|bold"
            android:textSize="18sp" />
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="10dp">

        <TextView
            android:text="@string/timeLessonViewShowTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/timeLessonViewShowTextView"
            android:layout_weight="1"
            android:fontFamily="sans-serif"
            android:textSize="24sp"
            android:textStyle="normal|bold"
            android:textColor="#000" />

        <TextView
            android:text="@string/timeLessonViewTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/timeLessonViewTextView"
            android:layout_weight="1"
            android:textStyle="normal|bold"
            android:textAlignment="center"
            android:textSize="18sp" />
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="20dp">

        <TextView
            android:text="@string/descriptionShowLessonViewTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/descriptionShowLessonViewTextView"
            android:layout_weight="1"
            android:textSize="24sp"
            android:fontFamily="sans-serif"
            android:textStyle="normal|bold"
            android:textColor="#000" />

        <TextView
            android:text="@string/descriptionLessonViewTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/descriptionLessonViewTextView"
            android:layout_weight="1"
            android:textAlignment="center"
            android:textStyle="normal|bold"
            android:textSize="18sp"
            android:layout_gravity="center" />
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center">

        <Button
            android:text="@string/deleteLessonViewbutton"
            android:layout_width="119dp"
            android:layout_height="wrap_content"
            android:id="@+id/deleteLessonViewButton"
            android:textSize="16sp"
            android:background="#c91d12"
            android:textStyle="normal|bold"
            android:textColor="#fff" />

    </LinearLayout>
</LinearLayout>
