<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin">

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:id="@+id/nameEditText"
        android:hint="@string/nameEditText" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:id="@+id/areaEditText"
        android:hint="Area Of Study"
        tools:ignore="HardcodedText" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="phone"
        android:id="@+id/phoneEditText"
        android:hint="@string/phoneEditText" />

    <Button
        android:text="@string/createContactButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/createContactButton"
        android:layout_gravity="center"
        android:background="#555555" />

</LinearLayout>