<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_settings"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.ofirnagadi.ofirnagadi.project.SettingsActivity"
    android:orientation="vertical">

    <TextView
        android:text="@string/settingsTitleTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/settingsTitleTextView"
        android:fontFamily="casual"
        android:textSize="24sp"
        android:textStyle="normal|bold"
        android:textAlignment="center"
        android:textColor="#18517f"
        android:paddingBottom="20dp"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:ems="10"
        android:id="@+id/teacherNameEditText"
        android:layout_gravity="center"
        android:textStyle="normal|bold"
        android:textAlignment="center"
        android:hint="@string/teacherNameEditText"
        android:textSize="24sp"
        android:padding="10dp" />

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="50dp">

        <TextView
            android:text="@string/smsTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/smsTextView"
            android:layout_weight="1"
            android:textSize="24sp"
            android:textAlignment="viewStart" />

        <Switch
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/onOffSwitch"
            android:textSize="18sp"
            android:textStyle="normal|bold" />

    </LinearLayout>

    <Button
        android:text="@string/setButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/settingsSetButton"
        android:layout_gravity="center" />

</LinearLayout>
