<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="#000">

    <TextView
        android:text="@string/autenticationSureTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/autenticationSureTextView"
        android:textSize="35sp"
        android:textColor="#fff"
        android:textStyle="normal|bold"
        android:gravity="center"
        android:paddingBottom="15dp" />

    <View
        android:layout_width="wrap_content"
        android:background="#eeeeee"
        android:layout_height="5dp"
        android:paddingTop="50dp" />

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button
            android:text="@string/autenticationNoButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/autenticationLessonViewNoButton"
            android:layout_weight="1.02"
            android:textSize="30sp"
            android:textColor="#fff"
            android:background="#000" />
        <View
            android:layout_width="5dp"
            android:background="#eeeeee"
            android:paddingTop="50dp"
            android:layout_height="50dp" />

        <Button
            android:text="@string/autenticationYesButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/autenticationLessonViewYesButton"
            android:layout_weight="1"
            android:textSize="30sp"
            android:textColor="#fff"
            android:background="#000" />
    </LinearLayout>

</LinearLayout>